packages/web/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chorro
  name: chorro-web-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: chorro
